--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "moment": "^2.27.0",
     "needle": "^2.5.2",
     "tress": "^1.1.4"
   }
