--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bluebird": "^3.5.32",
+    "bluebird": "^3.7.2",
     "cheerio": "^1.0.0-rc.3",
-    "moment": "^2.27.0",
+    "got": "^11.6.2",
+    "moment": "^2.28.0",
     "needle": "^2.5.2",
-    "tress": "^1.1.4"
+    "tress": "^1.1.4",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
   }
 }
